bu menim ilk boyuk projectimdir

--- a/index.html
+++ b/index.html
@@ -23,6 +23,39 @@
         </div>
     </header>
 
+    <div class="main-content">
+        <section class="left-side">
+            <h2>About Me </h2>
+            <img src="./assets/images/images (1).jfif" alt="">
+            <p>
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Facilis dignissimos hic enim molestias tenetur,
+                blanditiis facere architecto sint officia accusamus amet expedita incidunt neque odio. Nihil nam facilis
+                labore atque! Lorem ipsum, dolor sit amet consectetur adipisicing elit. Nesciunt iusto illo non minus
+                doloremque, enim consectetur necessitatibus harum alias aliquam in soluta rerum ut ab, minima
+                voluptatibus inventore quaerat possimus. Minus dolorum velit, repudiandae nostrum voluptatem voluptates
+                ipsum, nulla facere libero perspiciatis, quibusdam excepturi. Incidunt cum error exercitationem
+                obcaecati deleniti, ab commodi fugit culpa, non beatae blanditiis excepturi. Quis possimus recusandae
+                consequuntur adipisci minima fuga quae vitae maiores rem, accusantium illum natus voluptatem ducimus
+                culpa atque sit, non ipsum laudantium quo ullam tenetur. Quae repudiandae quibusdam veniam accusamus
+                perferendis deleniti facere aut vero dolores. Illum labore ipsam recusandae veniam iusto.</p>
+
+        </section>
+
+        <section class="right-side">
+            <h2 class="h2">Content Width Me</h2>
+
+            
+              <div class="rigth-img"><a  href=""><img width="50px" src="./assets/images/New folder/linkedin-128.png" alt=""></a>
+                <a  href=""><img width="50px" src="/assets/images/New folder/stackoverflow-128.png" alt=""></a>
+                <a  href=""><img width="50px" src="./assets/images/New folder/github-128.png" alt=""></a> </div>  
+            
+
+        </section>
+
+    </div>
+    <footer class="footer">Copyright @ 2022 Omar Nastakalov</footer>
+
+
 </body>
 
 </html>
